# cgm

./: .clang-format  .editorconfig  CMakeLists.txt  ReadMe.md  vcpkg.json
lib/: CMakeLists.txt  binary.cpp  binary.h  cgm.cpp  clear_text.cpp  clear_text.h  context.h  gkscore.cpp  gkscore.h  gksws.cpp  gksws.h  impl.cpp  impl.h  io.cpp  stream.cpp  stream.h
lib/include/cgm/: builder.h  cgm.h  mows.h
test/: Binary.cpp  CMakeLists.txt  ClearText.cpp  MOWorkstation.cpp  test.cpp
